added header container to index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
     
+    <!-- WD Header Section -->
+    <header class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-5 text-center">Weather Dashboard</h1>
+        </div>
+    </header>
+
+    <!-- Main Content Container -->
+    <div class="container-fluid"></div>
 </body>
 </html>
