added button layout to index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
     </header>
 
     <!-- Main Content Container -->
-    <div class="container-fluid"></div>
+    <div class="container-fluid">
+
+        <div class="row">
+            <!-- Search Bar for City Names -->
+            <div class="col-3 searchCol">
+
+                <h4>Search City:</h4>
+                <div class="input-group mb-3">
+
+                    <!-- Search Button Input Form -->
+                    <input type="text" class="form-control" id="cityInput" placeholder="City Name" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-primary" type="button" id="citySearchBtn">
+                            <img src="./assets/img/searchglass.png" width="20px"/></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
