added main text styling and began header styling

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- Repo Link Footer Container -->
     <footer class="footer mt-auto py-3 text-center">
         <div class="container">
-            <span class="text-muted">Here you can find a link to the source code for this application at <a href="https://github.com/Brevenn/module.6.whats-the-weather">Charles Glasgow</a></span>
+            <span class="text-muted">Here you can find a link to the source code for this application at <a href="https://github.com/Brevenn/module.6.whats-the-weather"> Github: Brevenn </a></span>
         </div>
     </footer>
 
