--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 
                 <!-- Search History container -->
                 <div class="card">
-                    <ul class="list-group list-group-flush" id="search-history-list"></ul>
+                    <ul class="list-group list-group-flush" id="search-history-list">
+
+                    </ul>
+                    <button class="btn btn-sm btn-secondary" id="clear-history">Clear Search History</button>
                 </div>
             </div>
         </div>
