finished weather content container and began forecast data container

--- a/index.html
+++ b/index.html
@@ -45,6 +45,29 @@
                     <button class="btn btn-sm btn-secondary" id="clear-history">Clear Search History</button>
                 </div>
             </div>
+
+            <!-- Weather Content Container -->
+            <div class="col-12 mol-md-9 hide" id="weather-content">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="city-info border rounded my-3 px-3 py-3">
+                            <h2 id="current-city">Info for your City <small class="text-muted" id="current-date"></small></h2>
+                            <p class="mb-0">Tempurature: <span id="current-temp"></span></p>
+                            <p class="mb-0">Humidity: <span id="current-humidity"></span></p>
+                            <p class="mb-0">Wind Speed: <span id="current-wind-speed"></span></p>
+                            <p>UV Index: <span id="uv-index"></span></p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Forecast Data Container -->
+                <div class="row">
+                    <div class="col-12">
+                        <h3>5-Day Forecast</h3>
+                        
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
